Numbers deleted and some refractions

--- a/EcuationDrawer/EquationDrawer/Base.lproj/MainMenu.xib
+++ b/EcuationDrawer/EquationDrawer/Base.lproj/MainMenu.xib
@@ -21,11 +21,11 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="EcuationDrawer" id="1Xt-HY-uBw">
+                <menuItem title="EquationDrawer" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="EcuationDrawer" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="EquationDrawer" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About EcuationDrawer" id="5kV-Vb-QxS">
+                            <menuItem title="About EquationDrawer" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -43,7 +43,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide EcuationDrawer" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide EquationDrawer" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -61,7 +61,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit EcuationDrawer" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit EquationDrawer" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -674,7 +674,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="EcuationDrawer Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="EquationDrawer Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
@@ -685,7 +685,7 @@
             </items>
             <point key="canvasLocation" x="133" y="-147"/>
         </menu>
-        <window title="EcuationDrawer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="EquationDrawer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="984" height="528"/>
