--- a/EcuationDrawer/EquationDrawer/PreferencesWindow.xib
+++ b/EcuationDrawer/EquationDrawer/PreferencesWindow.xib
@@ -33,7 +33,6 @@
                 <outlet property="nameTextField" destination="mX6-C5-zWE" id="YrJ-8c-0q5"/>
                 <outlet property="nameTextFieldInterpeterWindow" destination="f9P-aQ-gUc" id="yMu-EC-Pf0"/>
                 <outlet property="nameTextFieldPreferences" destination="IfK-1p-LzC" id="bzv-a6-cVw"/>
-                <outlet property="numbers" destination="gXq-JF-vB4" id="2Ar-Um-yaA"/>
                 <outlet property="paramsInterpeterWindow" destination="2nD-Lz-sWb" id="Xzc-ny-SLh"/>
                 <outlet property="paramsTableView" destination="ZKU-B8-ba6" id="TgE-Jc-BN4"/>
                 <outlet property="qualitySlider" destination="3bp-1s-jpq" id="bIJ-34-tBE"/>
@@ -444,7 +443,7 @@ DQ
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="Aoc-Xt-FuF">
                                                 <rect key="frame" x="1" y="0.0" width="312" height="134"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="Ar1-N3-Vls" id="2nD-Lz-sWb">
                                                         <rect key="frame" x="0.0" y="0.0" width="312" height="111"/>
@@ -520,7 +519,7 @@ DQ
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="6bY-BN-ZfO">
                                                 <rect key="frame" x="1" y="0.0" width="327" height="225"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="yPm-rE-N0p" id="C50-4o-wsU">
                                                         <rect key="frame" x="0.0" y="0.0" width="327" height="202"/>
@@ -595,7 +594,7 @@ DQ
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <clipView key="contentView" ambiguous="YES" id="lnm-rB-Bpr">
                                                 <rect key="frame" x="1" y="0.0" width="327" height="225"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="dJa-nf-lvm" id="DRi-VJ-4Cc">
                                                         <rect key="frame" x="0.0" y="0.0" width="327" height="202"/>
@@ -885,19 +884,8 @@ DQ
                                                 <action selector="visualPropertyListener:" target="-2" id="hLv-qM-IxD"/>
                                             </connections>
                                         </button>
-                                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d1B-Bp-GYt">
-                                            <rect key="frame" x="23" y="136" width="78" height="18"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                            <buttonCell key="cell" type="check" title="Numbers" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="gXq-JF-vB4">
-                                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                                <font key="font" metaFont="system"/>
-                                            </buttonCell>
-                                            <connections>
-                                                <action selector="visualPropertyListener:" target="-2" id="aQo-sy-zs3"/>
-                                            </connections>
-                                        </button>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="txZ-mK-Bkp">
-                                            <rect key="frame" x="23" y="109" width="133" height="18"/>
+                                            <rect key="frame" x="23" y="128" width="133" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="check" title="Marcas numericas" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="2Tn-AB-sYX">
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -982,7 +970,7 @@ DQ
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         </box>
                                         <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3bp-1s-jpq">
-                                            <rect key="frame" x="23" y="45" width="178" height="24"/>
+                                            <rect key="frame" x="23" y="55" width="178" height="24"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <sliderCell key="cell" state="on" alignment="left" maxValue="2" doubleValue="1" tickMarkPosition="below" numberOfTickMarks="3" allowsTickMarkValuesOnly="YES" sliderType="linear" id="6In-h8-8G0"/>
                                             <connections>
@@ -990,7 +978,7 @@ DQ
                                             </connections>
                                         </slider>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XqI-g9-kXS">
-                                            <rect key="frame" x="92" y="24" width="41" height="17"/>
+                                            <rect key="frame" x="92" y="31" width="41" height="17"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Media" id="Bk4-cp-Q8J">
                                                 <font key="font" metaFont="system"/>
@@ -999,7 +987,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BFW-Zo-xZW">
-                                            <rect key="frame" x="19" y="24" width="30" height="17"/>
+                                            <rect key="frame" x="19" y="31" width="30" height="17"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Baja" id="zBz-ub-ya2">
                                                 <font key="font" metaFont="system"/>
@@ -1008,18 +996,9 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GMe-nC-ZUf">
-                                            <rect key="frame" x="31" y="76" width="163" height="17"/>
+                                            <rect key="frame" x="31" y="85" width="163" height="17"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="Calidad de representación" id="diQ-GY-Aym">
-                                                <font key="font" metaFont="system"/>
-                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            </textFieldCell>
-                                        </textField>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RHU-18-qfQ">
-                                            <rect key="frame" x="173" y="24" width="28" height="17"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <textFieldCell key="cell" lineBreakMode="clipping" title="Alta" id="7qD-mE-xP8">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1094,16 +1073,16 @@ DQ
                                         <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4or-e8-Yy0">
                                             <rect key="frame" x="477" y="348" width="237" height="24"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                            <sliderCell key="cell" continuous="YES" enabled="NO" state="on" alignment="left" minValue="0.050000000000000003" maxValue="1" doubleValue="0.5" tickMarkPosition="above" numberOfTickMarks="30" sliderType="linear" id="VXo-8J-2wW"/>
+                                            <sliderCell key="cell" continuous="YES" enabled="NO" state="on" alignment="left" minValue="0.01" maxValue="1" doubleValue="0.5" tickMarkPosition="above" numberOfTickMarks="30" sliderType="linear" id="VXo-8J-2wW"/>
                                             <connections>
                                                 <action selector="widthSliderListener:" target="-2" id="Sk8-WG-Hl4"/>
                                             </connections>
                                         </slider>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iw2-Lt-cgg">
-                                            <rect key="frame" x="477" y="373" width="24" height="11"/>
+                                            <rect key="frame" x="477" y="373" width="23" height="11"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <textFieldCell key="cell" lineBreakMode="clipping" title="0.05" id="9uA-LA-raT">
-                                                <font key="font" metaFont="system" size="9"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" title="0.01" id="9uA-LA-raT">
+                                                <font key="font" metaFont="miniSystem"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
@@ -1112,7 +1091,7 @@ DQ
                                             <rect key="frame" x="691" y="373" width="17" height="11"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="1.0" id="2cm-xK-ZVy">
-                                                <font key="font" metaFont="system" size="9"/>
+                                                <font key="font" metaFont="miniSystem"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
@@ -1121,7 +1100,16 @@ DQ
                                             <rect key="frame" x="584" y="373" width="18" height="11"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="0.5" id="CWA-kB-P56">
-                                                <font key="font" metaFont="system" size="9"/>
+                                                <font key="font" metaFont="miniSystem"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RHU-18-qfQ">
+                                            <rect key="frame" x="179" y="31" width="28" height="17"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" title="Alta" id="7qD-mE-xP8">
+                                                <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
